# Coding-Game

./: .gitignore  CMakeLists.txt  game  main.cpp
_assets/presets/: compile_code.sh  robot.cs  run_code.sh
_assets/presets/default_code/: _communication.cs
_assets/stages/0/0/: level.info
_assets/stages/0/1/: level.info
_user/: stages.info
_user/stages/0/0/: level.info
_user/stages/0/1/: level.info
_user/stages/0/2/: level.info
_user/stages/0/3/: level.info
_user/stages/1/0/: level.info
_user/stages/1/1/: level.info
lib_campaign_screen/: CMakeLists.txt  campaign_screen.cpp  campaign_screen.h
lib_helpers/: CMakeLists.txt  helpers.cpp  helpers.h
lib_level_editor_screen/: CMakeLists.txt  level_editor_screen.cpp  level_editor_screen.h
lib_level_screen/: CMakeLists.txt  bonus_tile.cpp  bonus_tile.h  bot.cpp  bot.h  finish_tile.cpp  finish_tile.h  level_screen.cpp  level_screen.h  spawner_tile.cpp  spawner_tile.h  stage.cpp  stage.h  tile.cpp  tile.h  top_bar.cpp  top_bar.h  win_condition.h
lib_sandbox_screen/: CMakeLists.txt  sandbox_screen.cpp  sandbox_screen.h
lib_selection_screen/: CMakeLists.txt  selection_screen.cpp  selection_screen.h  stage.cpp  stage.h
lib_stage_screen/: CMakeLists.txt  stage.cpp  stage.h  stage_screen.cpp  stage_screen.h
lib_title_screen/: CMakeLists.txt  title_screen.cpp  title_screen.h
lib_window/: CMakeLists.txt  button.cpp  button.h  dialog.cpp  dialog.h  drawable.h  image.h  image_button.cpp  image_button.h  style.cpp  style.h  text.h  text_button.cpp  text_button.h  window.cpp  window.h
(+7 files in other folders)
